--- a/index.html
+++ b/index.html
@@ -90,10 +90,14 @@
 <body>
     <div class="container">
         <h1>boring web server</h1>
-        <center><a href="https://github.com/sudo-self/a-boring-web-server/actions/workflows/static.yml">
-          <img src="https://github.com/sudo-self/a-boring-web-server/actions/workflows/static.yml/badge.svg" alt="Deploy static content to Pages">
+        <center><a href="https://github.com/sudo-self/chat-app/actions/workflows/deploy.yml/">
+          <img src="https://github.com/sudo-self/chat-app/actions/workflows/deploy.yml/badge.svg" alt="Deploy">
         </a></center>
 
+
+  
+  [!
+        
         
         <div class="iframe-container">
             <iframe src="https://games.jessejesse.com" frameborder="0"></iframe>
